# iota_entities

./: README.md
entities/: Cargo.toml
entities/data/: universidad.db
entities/src/: database.rs  lib.rs  pdf.rs
entities/src/templates/: footer.html  overlay.html  set.html
entities/src/utils/: crypto.rs  functions.rs  keys_storage.rs  mod.rs  types.rs
examples/: credential_example.jwt
identity_iota_core/src/: lib.rs
identity_iota_core/src/did/: iota_did.rs
identity_iota_core/src/document/: iota_document.rs
identity_iota_core/src/rebased/: utils.rs
identity_iota_core/src/rebased/client/: read_only.rs
identity_iota_core/src/rebased/iota/: mod.rs  package.rs
identity_iota_core/src/rebased/iota/move_calls/: asset.rs  mod.rs
identity_iota_core/src/rebased/iota/move_calls/identity/: borrow.rs  config_change.rs  create.rs  delegation.rs  exec.rs  mod.rs  send.rs  sub_identity.rs  update.rs  upgrade.rs
identity_iota_core/src/rebased/migration/: multicontroller.rs  registry.rs
identity_iota_core/src/rebased/proposals/: access_sub_identity.rs  borrow.rs  controller.rs
identity_iota_core/tests/e2e/: identity.rs
portal/: README.md  package-lock.json  package.json  server.js
portal/public/: app.js  index.html  styles.css
