[package]
name = "entities"
version = "1.4.0"
authors = ["Maria Teresa Guillen"]
edition = "2021"
publish = false

[dependencies]
#dentity_iota = { git = "https://github.com/iotaledger/identity", tag = "v1.8.0-beta.3", package = "identity_iota"}
identity_storage = { git = "https://github.com/iotaledger/identity", tag = "v1.8.0-beta.3", package = "identity_storage" }
#identity_stronghold = { git = "https://github.com/iotaledger/identity", tag = "v1.8.0-beta.3", package = "identity_stronghold", default-features = false, features = ["send-sync-storage"] }
identity_eddsa_verifier = { git = "https://github.com/iotaledger/identity", tag = "v1.8.0-beta.3", package = "identity_eddsa_verifier", default-features = false, features = ["ed25519"] }
identity_pqc_verifier  = { git = "https://github.com/iotaledger/identity", tag = "v1.8.0-beta.3", package = "identity_pqc_verifier", default-features = true  }
identity_did = { git = "https://github.com/iotaledger/identity", tag = "v1.8.0-beta.3", package = "identity_did" }

secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0" }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v1.14.1" }
iota-caip = { git = "https://github.com/iotaledger/iota-caip.git", features = ["iota", "resolver"] }
#iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = ["tls", "client"] }
notarization = { git = "https://github.com/iotaledger/notarization.git", tag = "v0.1.13", features = ["irl"] }
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.9", package = "product_common", features = ["core-client", "transaction"] }

rand = "0.8.5"
sd-jwt-payload = { version = "0.2.1", default-features = false, features = ["sha"] }

anyhow = "1.0.62"
tokio = { version = "1.46.1", default-features = false, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

json-proof-token = { version = "0.4" }

actix-web = "4.12.1"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
sqlite = "0.37.0"
urlencoding = "2"
tera = "1.19"
image = "0.25"
qrcode = "0.14"
chrono = "0.4.44"
#fips204 = "0.4.6"
#ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }

[dependencies.identity_iota]
git = "https://github.com/iotaledger/identity"
tag = "v1.8.0-beta.3"
default-features = false
features = [
  "domain-linkage",
  "jpt-bbs-plus",
  "iota-client",
  "send-sync",
  "memstore",
  "resolver",
  "revocation-bitmap",
  "sd-jwt",
  "status-list-2021",
  "keytool",
  "hybrid-liboqs",
  "gas-station",
  "default-http-client",
  "irl",
]
